# silabs-mlops

./: .env  .gitattributes  .gitignore  DATA_INGEST_GUIDE.md  INTERNAL_DATA_FLOW.md  LICENSE.md  MODEL_MODULE_GUIDE.md  PROFILING_GUIDE.md  QUICKSTART.md  README.md  USER_GUIDE.md  mise.toml  pyproject.toml  requirements.txt  setup.py
.cursor/skills/pr/: SKILL.md
.cursor/skills/review-code/: SKILL.md
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: 01-CLA-Assistant.yml  cla.yml  pr.yml  publish.yml  trufflehog.yml
AIML_2.2.0_studio_setup/: aiml_templates.xml
AIML_2.2.0_studio_setup/aiml_soc_voice_ble_efr32_micriumos/: main.c
AIML_2.2.0_studio_setup/aiml_soc_voice_ble_efr32_micriumos/config/: audio_classifier_config.h
aimL_3.0.0_package_manager_setup/voice+ble/: app.h  pkg.slt
docs/: ble_module_guide.md  custom_model_training_guide.md  data_ingest_guide.md  data_ingestion_system.md  databricks_setup_guide.md  deployment_guide.md  firmware_update_guide.md  logs_guide.md  model_profiling_on_databricks_guide.md  notebook_profiling_guide.md  profiling_guide.md  quickstart.md  raspberry_pi_setup.md  rpi_deployment_guide.md  rpi_script_Setup_guide.md  rpi_to_cloud_data_ingestion.md  user_guide.md
docs/images/: raspberry-pi-imager-advanced-options-1.avif
examples/: data_ingestion.py  deployment.py  logger.py  model_deployment.py  model_profiling.ipynb  npu_profiling.py  profiling.py  rpi_deployment.py  simulate_ingestion.py  wake_word_simulate_ingestion.py
examples/Forwarder_and_Ingestion_scripts/: ble_receiver.py  ingestion_engine.py  ingestion_service.py
examples/forwarder_and_ingestion_scripts/: ingestion_engine.py  ingestion_service.py  sequential_ingestion_engine.py
examples/mltk_model_training/: custom_model.py  run_custom_model.ipynb
examples/voice_ble_controller/: .clangd  .projectlinkstore  APP_FLOW_AI_AUDIO_CLASSIFIER.md  APP_FLOW_BT_THERMOMETER.md  MERGE_READINESS_REPORT.md  README.md  app.c  audio_classifier.cc  readme_rtos.md  recognize_commands.cc  voice_ble_controller.pintool  voice_ble_controller.slcp  voice_ble_controller.slps  vscode.conf
examples/voice_ble_controller/aiml_sdk/: CMakeLists.txt  CMakePresets.json  README.md  aiml.slce  aiml.slsdk  aiml_docs.xml  conaninfo.txt  conanmanifest.txt
examples/voice_ble_controller/aiml_sdk/component/: arducam.slcc  imu_driver_si91x.slcc  jlink_stream.slcc  mic_driver_si91x.slcc  ml_audio_feature_generation.slcc  ml_cmsis_dsp_rfft_q15.slcc  ml_image_feature_generation.slcc  ml_profiler.slcc  ml_silabs_profiler.slcc  tensorflow_debug_log_iostream.slcc  tensorflow_debug_log_none.slcc  tensorflow_dependency_flatbuffers.slcc  tensorflow_dependency_gemmlowp.slcc  tensorflow_dependency_ruy.slcc  tensorflow_lite_micro.slcc  tensorflow_lite_micro_accelerated_kernels.slcc  tensorflow_lite_micro_optimized_kernels.slcc  tensorflow_lite_micro_reference_kernels.slcc
examples/voice_ble_controller/aiml_sdk/examples/: LICENSE.md  aiml_demos.xml  aiml_templates.xml
examples/voice_ble_controller/cmake_gcc/: CMakeLists.txt  CMakePresets.json  voice_ble_controller.cmake
examples/voice_ble_controller/config/: audio_classifier_config.h  pin_config.h  sl_board_control_config.h  sl_cli_config.h  sl_cli_config_example.h  sl_driver_mvp_config.h  sl_iostream_eusart_vcom_config.h  sl_mic_i2s_config.h  sl_nn_mvp_config.h  sl_simple_led_led0_config.h  sl_simple_led_led1_config.h  sl_tflite_micro_config.h
examples/voice_ble_controller/config/btconf/: gatt_configuration.btconf  slc_args.json
examples/voice_ble_controller/config/tflite/: slc_args.json  (+1 more)
firmware/aiml_ble_soc_kws_efr32_micriumos/: aiml_ble_soc_kws_efr32_micriumos.pintool  aiml_ble_soc_kws_efr32_micriumos.slcp  aiml_ble_soc_kws_efr32_micriumos.slps  app.c  app.h  audio_classifier.h  pkg.slt  readme.md
firmware/aiml_ble_soc_kws_efr32_micriumos/prebuilt/: aiml_ble_soc_kws_efr32_micriumos.hex  aiml_ble_soc_kws_efr32_micriumos.s37
firmware/voice+ble/: .gitignore  app.c  main.c  recognize_commands.cc  recognize_commands.h
firmware/voice+ble/binaries/: aiml_soc_voice_ble_efr32_micriumos.hex  aiml_soc_voice_ble_efr32_micriumos.s37
raspberry/docs/: ble_module_guide.md  raspberry_pi_setup.md  rpi_script_Setup_guide.md
raspberry/forwarder_and_ingestion_scripts/: batch_ingestion_engine.py  ble_receiver.py
scripts/examples/: classify_and_rename_on_off.py  data_ingestion.py  rpi_deployment.py
scripts/rpi/: batch_ingestion_engine.py  ble_receiver.py  ingestion_service.py  sequential_ingestion_engine.py
scripts/training/: custom_model.py  model_profiling.ipynb  run_custom_model.ipynb  vosk_preprocessing.py
scripts/training/custom_models/: Custom_model.h5  Custom_model.tflite  Custom_model.tflite.summary.txt  Custom_model_teacher.h5
silabs_mlops/: __init__.py  artifacts.yaml  cli.py  config.py  logs.py
silabs_mlops/common/: __init__.py  auth.py  validators.py
silabs_mlops/data/: __init__.py
silabs_mlops/data/ingest/: README.md  __init__.py  config.py  ingestor.py  zerobus_client.py
silabs_mlops/device/: manager.py
silabs_mlops/logs/: init.py  logs.py
silabs_mlops/model/: __init__.py  compiler.py  config.py  deployer.py  profiler.py  rpi_deployer.py
sml/: __init__.py
sml/ops/: __init__.py  cli.py  config.py  logs.py
sml/ops/ble/: __init__.py  config.py  receiver.py
sml/ops/data/: __init__.py
sml/ops/model/: __init__.py  commander.py  config.py  deployer.py  profiler.py
studio_way/aiml_soc_voice_ble_efr32_micriumos/: aiml_soc_voice_ble_efr32_micriumos.slcp  audio_classifier.cc
tests/: test_ble.py  test_ble_config.py  test_ble_init.py  test_ble_receiver.py  test_cli.py  test_data_ingestor.py  test_data_module.py  test_ingestion_service.py  test_logs_logger.py  test_model_deployer.py  test_model_profiler.py  test_zero_bus_client.py
voice+ble/: aiml_soc_audio_classifier_efr32_micriumos.slcp  user.slconf
voice+ble/autogen/: pkg.slconf
voice+ble/binaries/: aiml_soc_audio_classifier_efr32_micriumos.hex  jeevan_latest.s37
(+173 files in other folders)
