[project]
name = "sml-ops"
version = "0.1.1"
description = "Silicon Labs MLOps SDK for edge devices and Databricks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bleak",
  "click>=8.3.1",
  "databricks-zerobus-ingest-sdk==1.1.0",
  "dotenv>=0.9.9",
  "mlflow>=3.10.1",
  "pyyaml>=6.0.3",
  "requests>=2.33.0",
]

[dependency-groups]
dev = ["ruff>=0.15.20", "ty>=0.0.55"]
test = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]

[project.scripts]
sml = "sml.ops.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "tests"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
addopts = "--cov=sml.ops.model --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821"]
