[project]
version = "0.1.4a1"
name = "silabs-mlops"
description = "Silicon Labs MLOps SDK for edge devices and Databricks."
readme = "README.md"
license = "LicenseRef-MSLA"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
authors = [{ name = "Silicon Laboratories" }]
keywords = [
  "mlops",
  "databricks",
  "edge",
  "ble",
  "silicon-labs",
  "mlflow",
  "iot",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "bleak",
  "click>=8.3.1",
  "databricks-zerobus-ingest-sdk==1.1.0",
  "dotenv>=0.9.9",
  "mlflow>=3.10.1",
  "pyyaml>=6.0.3",
  "requests>=2.33.0",
]

[project.urls]
Homepage = "https://github.com/SiliconLabsSoftware/silabs-mlops"
Documentation = "https://github.com/SiliconLabsSoftware/silabs-mlops/tree/main/docs"
Repository = "https://github.com/SiliconLabsSoftware/silabs-mlops"
Issues = "https://github.com/SiliconLabsSoftware/silabs-mlops/issues"

[dependency-groups]
dev = ["ruff>=0.15.20", "ty>=0.0.55"]
test = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]

[project.scripts]
sml = "sml.ops.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sml*"]
exclude = ["tests*"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
addopts = "--cov=sml.ops.model --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true
